--- a/OnlineProductStore/Client/OnlineProductStore.Client.csproj
+++ b/OnlineProductStore/Client/OnlineProductStore.Client.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Shared\NewFolder\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
