--- a/OnlineProductStore/Server/appsettings.json
+++ b/OnlineProductStore/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLEXPRESS;database=OnlineProductStore;Trusted_Connection=True;TrustServerCertificate=True;User ID=admin;Password=123321;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
